2001-11-01  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-control-frame.c
	(bonobo_control_frame_set_inproc_widget): impl. to do aweful
	GtkPlug / Socket skullduggery - we know we're in-proc well
	before the plug / socket is realized.

	* bonobo/bonobo-control.c
	(bonobo_control_set_control_frame): setup inproc_frame.

	* bonobo/bonobo-control-frame.c
	(bonobo_control_frame_bind_to_control): upd, unset the
	frame on the control if we are releasing it, setup
	inproc_control if we're in-proc.
	(bonobo_control_frame_set_ui_container): short circuit re-set.
	(bonobo_control_frame_dispose): use the generic routines.
	(bonobo_control_frame_set_propbag): upd. for sloppier bonobo
	ref methods.

	* bonobo/bonobo-control.c: s/control_frame/frame/

2001-11-01  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-control.c
	(bonobo_control_set_control_frame): de-activate exiting frame.
	(bonobo_control_dispose): use the std. methods, destroy not
	unref toplevel widget.
	(bonobo_control_set_properties): short circuit re-set.
	(bonobo_control_set_ui_component): short circuit re-set,
	unset the ui_component's container on release, dup the
	incoming ref.
	(bonobo_control_notify_plug_died): update for new ORBit2 API.

2001-11-01  Michael Meeks  <michael@ximian.com>

	* tests/control/test-control.c (main): use
	bonobo_debug_shutdown.

	* tests/test-sensitivity.c (main): ditto

	* tests/test-reparent.c (main): ditto

	* tests/test-focus.c (main): ditto.

2001-10-31  Michael Meeks  <michael@ximian.com>

	* tests/control/test-control.c (main): upd.
	(run_tests, create_test, create_frame),
	(create_control, destroy_test, mainloop_for): impl.

2001-10-30  jacob berkman  <jacob@ximian.com>

	* bonobo/bonobo-control.c (ORBIT2_INTERNAL_API): define this so
	that we build with current orbit

	* bonobo/libbonoboui-2.0.pc.in (Cflags): 
	* bonobo/Makefile.am (libbonoboincludedir): 
	* Makefile.am (libincludedir): use libbonoboui-2.0 rather than
	gnome-2.0
